# FTMO_Bot

./: .flake8  .gitignore  Prompt_Maitre_Setup_Trading_FTMO.yaml  README.md  backup.sh  bridge_server.py  bridge_server.py.bak  check_env.py  close_all.py  decide_trade_once.py  fTmo_update.py  ftmo  ftmo_helpers.zsh  gpt_bridge.py  gpt_bridge.py.bak  gpt_bridge.py.bak_20250920_023011  gpt_bridge.py.bak_20250921_035640  gpt_bridge.py.bak_20250921_040514  gpt_bridge.py.bak_20250921_041753  gpt_bridge.py.bak_20250921_044847  gpt_bridge.py.bak_20250921_045140  gpt_bridge_bad.py  gpt_bridge_bad_norm.py  gpt_bridge_mock_ok.py  gpt_bridge_old.py  gpt_bridge_prev.py  gpt_bridge_prev_llm.py  indicators_smoke_test.py  journal_equity.csv  journal_ftmo.csv  journal_trades.csv  mt5_io.py  norm_in_1758425973090.txt  norm_in_1758434739878.txt  norm_in_1758484692173.txt  norm_in_1758486428275.txt  norm_in_1758488408469.txt  norm_in_1758488850800.txt  order_test.py  pyproject.toml  (+53 more)
FTMO_BOT_V2/FTMO_BOT_V2/: .env.example  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  wf_results.json  wf_results_ext.json  wf_top1_ext.csv  wf_top5.csv
FTMO_BOT_V2/FTMO_BOT_V2/analysis/: inspect_top.ipynb
FTMO_BOT_V2/FTMO_BOT_V2/outputs/: grid_results.csv  top10.csv
FTMO_BOT_V2/FTMO_BOT_V2/scripts/: run_bot.sh  run_grid_report.py  run_grid_search.sh  run_grid_top.sh  run_walkforward_top.sh  walkforward_cli.py
FTMO_BOT_V2/FTMO_BOT_V2/src/: main.py
FTMO_BOT_V2/FTMO_BOT_V2/tests/: test_backtest.py  test_bot.py  test_cli_walkforward.py  test_optimizer.py  test_optimizer_top.py  (+3 more)
(+21 files in other folders)
