[tool.poetry]
name = "ftmo_bot_v2"
version = "0.1.0"
description = "A trading bot for FTMO challenges."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
# Add your project dependencies here
# e.g. requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"