[metadata]
name = FTMO_BOT_V2
version = 0.1.0
description = A trading bot for FTMO challenges.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/FTMO_BOT_V2
license = MIT

[options]
packages = find:
install_requires =
    requests
    pandas
    numpy
    ta
    # Add other dependencies as needed

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = *Tests
python_functions = test_*